# themarker

./: LICENSE  package-lock.json  package.json
src/: App.css  App.jsx  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: log_script.py  script.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/caminhos/: mod.rs
src-tauri/src/db_imagens/: mod copy.rs  mod.rs
src-tauri/src/db_projetos/: mod.rs
src-tauri/src/enums/: mod.rs
src-tauri/src/inf/: mod.rs
src-tauri/src/inicializador/: mod.rs
src-tauri/src/meudb/: mod.rs
src-tauri/src/mordomo/: mod.rs
src-tauri/src/projetos/: mod.rs
src-tauri/src/rotas/: aprojetos.rs  mod.rs  projetos.rs
src-tauri/src/servidor/: extras.rs  meudb.rs  mod.rs  novodb.rs  rotas.rs
src-tauri/src/tabelas/: mod.rs  projetos.rs
src/componentes/modalCarregarProjeto/: App.jsx  style.css
src/componentes/modalEntrarProjeto/: App.jsx  style.css
src/componentes/modalHospedarProjeto/: App.jsx  style.css
src/componentes/modalNovoProjeto/: App.jsx  style.css
src/componentes/modalSplash/: App.jsx
src/componentes/pontoMarcado/: App.jsx
src/telas/configuracoes/: App.jsx
src/telas/menu/: App.css  App.jsx
src/telas/principal/: App copy.jsx  App.css  App.jsx
src/telas/principal/components/: CurrentShape.jsx  Header copy.css  Header copy.jsx  Header.css  Header.jsx  Shape.jsx
