[package]
name = "themarker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "themarker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

duckdb = { version = "1.3.2", features = ["bundled"] }
directories-next = "2.0.0"

actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
async-duckdb = "0.2.0"
tokio = "1.47.1"
futures = "0.3.31"
chrono = "0.4.41"
rusqlite = {version = "0.37.0", features = ["chrono"] }

uuid = { version = "1.18.1", features= ["v7"] }
